source/_sass/syntax-highlight.scss
//
//  _|                                            _|
//  _|    _|_|_|  _|    _|    _|_|    _|    _|  _|_|_|_|
//  _|  _|    _|  _|    _|  _|    _|  _|    _|    _|
//  _|  _|    _|  _|    _|  _|    _|  _|    _|    _|
//  _|    _|_|_|    _|_|_|    _|_|      _|_|_|      _|_|
//                      _|
//                  _|_|

.highlighter-rouge {
  margin: 0.618em 0;
  pre.highlight {
    overflow-x: auto;
    margin: 0;
    padding: 0.382rem 1rem;
  }
}

figure.highlight {
  margin: 0.618em 0;
  & > pre {
    overflow-x: auto;
    margin: 0;
    padding: 0.382rem 1rem;
  }
}

.highlight {
  pre > code {
    display: inline-block;
  }

  // w/ linenos
  table {
    display: block;
    margin-top: 0;
    margin-bottom: 0;
    & > tbody {
      display: block;
      & > tr {
        display: flex;
        & > td {
          border: none;
          & > pre {
            margin-top: 0;
            margin-bottom: 0;
          }
          &.gutter {
            text-align: right;
            padding: 0;
            margin-left: 0.5em;
            margin-right: 1em;
          }
          &.code {
            padding: 0;
          }
        }
      }
    }
  }
}

@media screen and (min-width: 1000px) {
  .highlight {
    pre > code {
      white-space: pre-wrap;
    }
  }
}

//
//    _|      _|
//  _|_|_|_|  _|_|_|      _|_|    _|_|_|  _|_|      _|_|
//    _|      _|    _|  _|_|_|_|  _|    _|    _|  _|_|_|_|
//    _|      _|    _|  _|        _|    _|    _|  _|
//      _|_|  _|    _|    _|_|_|  _|    _|    _|    _|_|_|
//
//

.highlight {
  background-color: #333;
  color: darkgray;

  table > tbody > tr > td.gutter {
    color: darkgray;
  }

  // name
  .n  { color: silver }
  .nn { color: tomato } // namespace
  .nd { color: tomato } // decorator
  .nc { color: tomato } // class
  .nb { color: #39c } // built in
  .nt { color: #39c } // tag
  .nv { color: tomato } // variable

  // operator
  .o  {}

  // keyword
  .k  { color: orchid }
  .kt { color: khaki } // type
  .kc { color: sandybrown } // constant
  .kr { color: orchid } // reserved
  .k, .kr {
    font-weight: 500;
  }

  // number
  .mi { color: khaki } // integer
  .mf { color: khaki } // float

  // punctuation
  .p {}

  // comment
  .c { color: gray; font-style: italic }

  // string
  .s1 { color: yellowgreen } // single
  .s2 { color: yellowgreen } // double
}

